tests/NormalTests/paczka1/small_fuzzy/22556574.err
Error in line 2: c0ySipBT S919 46,6
Error in line 7: S131 S131 66,9
Error in line 5: Kve A779 31,7
